<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/style"
        app:iconSpaceReserved="false">

        <ListPreference
            app:key="textSize"
            app:title="@string/text_size"
            app:iconSpaceReserved="false"
            app:entries="@array/text_size"
            app:entryValues="@array/text_size_value"
            app:defaultValue="@string/default_string"
            app:useSimpleSummaryProvider="true"/>

        <ListPreference
            app:key="colorFillOption"
            app:title="@string/fill_options"
            app:iconSpaceReserved="false"
            app:entries="@array/fill_options"
            app:entryValues="@array/fill_options_value"
            app:defaultValue="@string/default_value"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreference
            app:key="nightMode"
            app:title="@string/dark_theme"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>



</androidx.preference.PreferenceScreen>